It's my final project

--- a/euclid.html
+++ b/euclid.html
@@ -18,10 +18,11 @@
 <hr> 
 <h1>Euclid Class</h1>
 <div class="div-2">
-<img src="https://scp-wiki.wikidot.com/local--files/component:anomaly-class-bar/euclid-icon.svg" width="125" length="125" alt="Euclidclass">
+<img src="https://scp-wiki.wikidot.com/local--files/component:anomaly-class-bar/euclid-icon.svg" width="125" length="125" alt="euclidclass">
 </div>
 </header>
 <section>
+<p class="p-1"><strong></strong></p>
 <!-- possible eulcid: Scp-956, Scp-2639, Scp-1032 -->
 </section>
 </body>
