--- a/keter.html
+++ b/keter.html
@@ -15,7 +15,11 @@
 <a href="euclid.html">Euclid</a>
 <a href="keter.html">Keter</a>
 </nav>
-<hr>   
+<hr>  
+<h1>Keter Class</h1>
+<div class="div-3">
+<img src="https://scp-wiki.wikidot.com/local--files/component:anomaly-class-bar/keter-icon.svg" width="125" length="125" alt="keterclass">
+</div>
 </header>
 <section>
 <!-- Possible keter's: Scp-871 Scp-2521 -->
