--- a/keter.html
+++ b/keter.html
@@ -22,7 +22,11 @@
 </div>
 </header>
 <section>
-<!-- Possible keter's: Scp-871 Scp-2521 -->
+<p class="p-1"><strong>Keter class is for things that are almost impossible to keep contained. If it does get contained, then it's containment requires far more resources than the other two classes. Not all the things in this class are dangerous, they are difficult to contain and keep in one place.   </strong></p>
+<p class="p-2"><a href="https://scp-wiki.wikidot.com/scp-871" target="_blank">SCP 871:Self-Replacing Cake</a> is one of the more cautious Keter's. It is a collection of over 273 cakes, all different in size and appearance. These cakes have the ability to replace itself 24 hours after it is eaten by a human, if anything else tries to eat it, it gets replaced instantly. The reason why it's a Keter is that if a cake isn't eaten in 24 hours, it will create a new cake with the same ability. There is no way of stopping it from replicating aside from eating it, so if any instance of it isn't contained it would start replicating a lot, in fact if an outbreak of one of these cakes occur it could render the earth unlivable in just 80 days, that's less than 4 months. </p>
+<p class="p-3"><a href="https://scp-wiki.wikidot.com/scp-2521" target="_blank">SCP 2521:**|*****|**|*</a> is a less dangerous Keter. It is a being covered by black ribbon like things covering its entire body, its shape is humanoid. This creature can phase through walls and teleport, but that isn't all that it does. The main thing it does is collect anything or anyone that describes it, for example, if you were to write about it on the paper it would appear right behind you and take the paper and disappear. That includes talking about it as well, so if you started describing it, it would take you. The only that it doesn't take would be pictures showing details of it.</p>
+<p class="p-4"><a href="https://scp-wiki.wikidot.com/scp-4999" target="_blank">SCP 4999:Someone To Watch Over Us</a> is our final example of a Keter. This SCP appears to be a human of unknown origin, it's appearance varies, with only dark formal wear being the only constant thing between sightings. This SCP shows itself to being who are either incredibly injured, have very poor health, or they're on their deathbed, and it will stay with that person 20 minutes before that person's death. It will only appear if that person's awake and alone. The SCP Foundation has no way of containing this entity because of its nature of appearing and disappearing, so it is classified as a Keter.  </p>
+
 </section>
 </body>
 
