--- a/safe.html
+++ b/safe.html
@@ -24,7 +24,7 @@
 </header>
 <section>
 
-<p class="p-1"><strong>Safe Class SCP's are anomalies that can be easily contained, you can guarantee that they will stay in one place, But just because they can be contained easily doesn't mean they aren't dangerous. Anomalies in this containment class are usually objects like a clock or a chair.</strong></p> 
+<p class="p-1"><strong>Safe Class SCP's are anomalies that can be easily contained, you can guarantee that they will stay in one place, requiring little to no resources to keep contained, But just because they can be contained easily doesn't mean they aren't dangerous. Anomalies in this containment class are usually objects like a clock or a chair.</strong></p> 
 
 
 <p class="p-2">An example of a safe SCP would be <a href="https://scp-wiki.wikidot.com/scp-978" target="_blank"> SCP 978:"The Desire Camera."</a> It works like a normal camera, however instead of showing what someone did at the time, it shows what someone wants to be doing. Not only does it work on humans, it also works on animals and other anomalies as well. This camera is not sentient, and it can't move, which makes it a safe class.</p>
