--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </header>
 <p>The SCP foundation is a fictional foundation that specializes in capturing and containing anomalies, things that shouldn't exist, unworldly things from different realities. The anomalies that this foundation captures can be anything from a person, an item, or a building itself</p>
 
-<p>SCP stands for "Secure, Contain, Protect" due to the fact that they contain anomalies and stop them from getting discovered by humanity. Their modo is "We die in the dark, so you can live in the light" as they risk their lives to protect humanity from things out of our understanding. </p>
+<p>SCP stands for "Secure, Contain, Protect" due to the fact that they contain anomalies and stop them from getting discovered by humanity. Their motto is "We die in the dark, so you can live in the light" as they risk their lives to protect humanity from things out of our understanding. </p>
 
 <p>There are many types of SCP's each with a different danger level and skills, but we will just go over the three common containment types of SCP's: Safe, Euclid, and Keter, we will be explained in their respective page.</p>
 <footer>
